<resources>
    <string name="app_name">Velo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_logout">Log Out</string>
    <string name="nav_item_find">Find Velowers</string>
    <string name="nav_item_developers">Developers</string>
    <string name="drawer_header_text">Velo</string>
    <string name="second_activity_text">Hello</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="register_title">Sign Up</string>
    <string name="register_name">Name</string>
    <string name="register_id">ID</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_phonenumber">Phone Number</string>
    <string name="register_studentid">Student ID</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="finish_button">Finish</string>
    <string name="riding_now">Riding...</string>
    <string name="have_bicycle">Do you have a bicycle?</string>
    <string name="add_bicycle">ADD</string>
    <string name="borrow_tab">Borrow</string>
    <string name="free_tab">Free</string>
    <string name="mybike_tab">My Bike</string>
    <string name="mypage_tab">My Page</string>
    <string name="bike_inform">Bike Information</string>
    <string name="bike_inform_owner">Owner</string>
    <string name="bike_inform_type">Type</string>
    <string name="bike_inform_photo">Photo</string>
    <string name="bike_inform_rent">Borrow</string>
    <string name="bike_inform_cancel">Cancel</string>
    <string name="bike_inform_location">Location</string>
    <string name="my_bike">My bike</string>
    <string name="my_bike_avail">Available</string>
    <string name="mp_velower">Velower</string>
    <string name="mp_velowing">Velowing</string>
    <string name="mp_find_velower">Find User</string>
    <string name="velow">Velow</string>
    <string name="change">Change Info</string>
    <string name="register_type_of_bicycle">Type of bicycle</string>
    <string name="register_lock_number">Lock number</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register">Register</string>
    <string name="password_dialog">Password:</string>
    <string name="change_location_button">Do you want to reset location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_button">Reset Location</string>
</resources>
