<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/have_bicycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/have_bicycle" />

        <Button
            android:id="@+id/register_bike"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:alpha="0.7"
            android:text="@string/add_bicycle"
            android:layout_gravity="center_horizontal|bottom"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/translucent"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/borrow_tab"
            android:text="@string/borrow_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/free_tab"
            android:text="@string/free_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/mybike_tab"
            android:text="@string/mybike_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/mypage_tab"
            android:text="@string/mypage_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>