<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bike_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/bike"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_type_of_bicycle"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/bike_type_list"
        android:layout_alignStart="@+id/textView4" />

    <RadioGroup
        android:id="@+id/bike_type_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/bike1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            android:button="@drawable/biketype_1_reg"
            android:background="@drawable/oncheck_radio"/>

        <RadioButton
            android:id="@+id/bike2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerInside"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            android:button="@drawable/biketype_2_reg"
            android:background="@drawable/oncheck_radio"/>

        <RadioButton
            android:id="@+id/bike3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            android:scaleType="centerInside"
            android:button="@drawable/biketype_3_reg"
            android:background="@drawable/oncheck_radio"/>

        <RadioButton
            android:id="@+id/bike4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@animator/lift_on_touch"
            android:scaleType="centerInside"
            android:button="@drawable/biketype_4_reg"
            android:background="@drawable/oncheck_radio"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_lock_number"
        android:layout_above="@+id/lock_edit"
        android:layout_alignLeft="@+id/lock_edit"
        android:layout_alignStart="@+id/lock_edit" />

    <EditText
        android:id="@+id/lock_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:width="300dp"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>